--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Study Notes
-description: Welcome
+description: by Zhang Beining
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
