--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Study Notes
-description: by Zhang Beining
+title: 学习笔记
+description: zbnzbn
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
