--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 学习笔记
-description: zbnzbn
+title: zbn学习笔记
+description: 一万年太久，只争朝夕。
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
